Presentation fix for Adbe Acrobat. Feature section of report.

--- a/report/presentation.tex
+++ b/report/presentation.tex
@@ -6,6 +6,7 @@
 %% Please do not remove author note!
 %
 
+\pdfminorversion=4
 \documentclass{beamer}
 
 
@@ -86,8 +87,8 @@
 \title{Making sense of data streams}
 \subtitle{Complex Event Processing for Controls Applications}
 \author{Kacper B. Sokol}
-\institute{CERN, EN/ICE}
-\date{\today}
+\institute{CERN, EN/ICE/SIC}
+\date{August 19, 2014}
 
 \begin{frame}[plain]
 	\titlepage
