Report references filled.

--- a/report/bibliography.bib
+++ b/report/bibliography.bib
@@ -18,3 +18,48 @@
   year={2013},
   publisher={IEEE}
 }
+
+@article{ frey07affinitypropagation,
+  author = "Brendan J. Frey and Delbert Dueck",
+  title = "Clustering by Passing Messages Between Data Points",
+  journal = "Science",
+  volume = "315",
+  pages = "972--976",
+  year = "2007",
+  url = "www.psi.toronto.edu/affinitypropagation"
+}
+
+@misc{Marinescu2006,
+  added-at = {2007-11-15T11:24:33.000+0100},
+  author = {Marinescu, Floyd},
+  biburl = {http://www.bibsonomy.org/bibtex/2a83c8590d726174737c718b841e8a181/brainmachine},
+  hh:mm = {2007.08.31},
+  howpublished = {Online article},
+  interhash = {7ccedf30ea1f10b237b34ba7851ae5c2},
+  intrahash = {a83c8590d726174737c718b841e8a181},
+  keywords = {BPM CEP ESP Esper messaging},
+  month = {July},
+  timestamp = {2007-11-15T11:24:33.000+0100},
+  title = {Esper: High Volume Event Stream Processing and Correlation in Java},
+  url = {http://www.infoq.com/news/Esper--ESP-CEP},
+  year = 2006
+}
+
+@book{Etzion:2010:EPA:1894960,
+  author = {Etzion, Opher and Niblett, Peter},
+  title = {Event Processing in Action},
+  year = {2010},
+  isbn = {1935182218, 9781935182214},
+  edition = {1st},
+  publisher = {Manning Publications Co.},
+  address = {Greenwich, CT, USA},
+}
+
+@book{Flach:2012:MLA:2490546,
+  author = {Flach, Peter},
+  title = {Machine Learning: The Art and Science of Algorithms That Make Sense of Data},
+  year = {2012},
+  isbn = {1107422221, 9781107422223},
+  publisher = {Cambridge University Press},
+  address = {New York, NY, USA},
+}
