Slide 9: colours and legend.

--- a/report/presentation.tex
+++ b/report/presentation.tex
@@ -242,9 +242,17 @@ from SinTick.win:time(60 sec);
 
   \begin{frame}[foot]
     \frametitle{\texttt{std} vs.\ Current} 
+    \vspace*{-2em}
     \begin{figure}
-      \includegraphics[scale=.5]{./gfx/f2f5.png}
+      \includegraphics[scale=.4]{./gfx/f2f5.png}
     \end{figure}
+    \vspace*{-2em}
+    \begin{block}{Legend}
+    \begin{description}
+      \item[\textcolor{lightred}{RED}] Signal standard behavior,
+      \item[\textcolor{lightblue}{BLUE}] Signal misbehavior---action needed.
+    \end{description}
+    \end{block}
   \end{frame}
 
   \begin{frame}[foot]
