--- a/report/presentation.tex
+++ b/report/presentation.tex
@@ -250,7 +250,7 @@ from SinTick.win:time(60 sec);
     \begin{block}{Legend}
     \begin{description}
       \item[\textcolor{lightred}{RED}] Signal standard behavior,
-      \item[\textcolor{lightblue}{BLUE}] Signal misbehavior---action needed.
+      \item[\textcolor{lightblue}{BLUE}] Signal abnormal behavior---action needed.
     \end{description}
     \end{block}
   \end{frame}
