--- a/report/report.tex
+++ b/report/report.tex
@@ -230,7 +230,7 @@ In my application I use rules as \emph{feature extractors}. In particular I am i
 \begin{description}
   \item[mean] signal average in given time period $\bar{v}$,
   \item[standard deviation] standard deviation in given time period $v_\sigma$,
-  \item[$n$-lag] is a difference between current value of signal and n\ts{th} previous value i.e.\ $v_t - v_{t-n}$,
+  \item[$k$-lag] is a difference between current value of signal and n\ts{th} previous value i.e.\ $v_t - v_{t-n}$,
   \item[threshold] is user-defined function which thresholds the signal based on single value $\mathscr{V}$,
   \item[current value] represents current value of a signal $v_t$,
   \item[\texttt{FN}] represents number of defined features,
