Presentation final. Report with graphs.

--- a/report/report.tex
+++ b/report/report.tex
@@ -366,30 +366,54 @@ Describe results of AP clustering --- not given.
 
 \begin{figure}[htbp]
   \centering
-  \begin{subfigure}[b]{0.4\textwidth}
+  \begin{subfigure}[b]{0.5\textwidth}
     \includegraphics[width=\textwidth]{./gfx/feature1-1.png}
     \caption{Signal average in time.\label{fig:average}}
   \end{subfigure}%
   ~ %add desired spacing between images, e. g. ~, \quad, \qquad, \hfill etc.
     %(or a blank line to force the subfigure onto a new line)
-  \begin{subfigure}[b]{0.4\textwidth}
+  \begin{subfigure}[b]{0.5\textwidth}
     \includegraphics[width=\textwidth]{./gfx/feature2-1.png}
     \caption{Signal standard deviation in time.\label{fig:standarddeviation}}
   \end{subfigure}
   ~ %add desired spacing between images, e. g. ~, \quad, \qquad, \hfill etc.
     %(or a blank line to force the subfigure onto a new line)
-  \begin{subfigure}[b]{0.4\textwidth}
+  \begin{subfigure}[b]{0.5\textwidth}
     \includegraphics[width=\textwidth]{./gfx/feature3-1.png}
     \caption{Signal $5$-Lag in time.\label{fig:lag}}
   \end{subfigure}
   \caption{Features extracted form signal.\label{fig:features}}
 \end{figure}
 
+
 \begin{figure}[htbp]
   \centering
-  \includegraphics[width=.7\textwidth]{./gfx/f2f5.png}
+  \begin{subfigure}[b]{0.5\textwidth}
+    \includegraphics[width=\textwidth]{./gfx/f1f5.png}
+    \caption{Average clustering.\label{fig:Caverage}}
+  \end{subfigure}%
+  ~ %add desired spacing between images, e. g. ~, \quad, \qquad, \hfill etc.
+    %(or a blank line to force the subfigure onto a new line)
+  \begin{subfigure}[b]{0.5\textwidth}
+    \includegraphics[width=\textwidth]{./gfx/f2f5.png}
+    \caption{Standard deviation clustering.\label{fig:Cstandarddeviation}}
+  \end{subfigure}
+  ~ %add desired spacing between images, e. g. ~, \quad, \qquad, \hfill etc.
+    %(or a blank line to force the subfigure onto a new line)
+  \begin{subfigure}[b]{0.5\textwidth}
+    \includegraphics[width=\textwidth]{./gfx/f4f5.png}
+    \caption{$5$-Lag clustering.\label{fig:Clag}}
+  \end{subfigure}
   \caption{Signal clustering based on extracted features.\label{fig:clustering}}
 \end{figure}
+
+
+\begin{figure}[htbp]
+  \centering
+  \includegraphics[width=.7\textwidth]{./gfx/f1f2.png}
+  \caption{Signal clustering based on extracted features.\label{fig:Wclustering}}
+\end{figure}
+
 
 \subsection{why particulat algorithms were chosen}
 \subsection{WEKA algorithms review}
